Removed index.css from use, added book covers to table. Fixed some bootstrap.

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,4 @@
 	width: 100%;
 	left: 0;
 	text-align: center;
-	margin: 0 auto;
-	margin-top: 1%;
 }
